--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900..900&display=swap"
+    />
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -17,6 +30,33 @@
     />
   </head>
   <body>
-    <h1>Moyo header</h1>
+    <header>
+      <img
+        src="images/logo.png"
+        alt="logo"
+        class="logo"
+      />
+
+      <nav>
+        <ul class="menu">
+          <li><a href="#">APPLE</a></li>
+          <li><a href="#">SAMSUNG</a></li>
+          <li><a href="#">Smartphones</a></li>
+          <li>
+            <a
+              href="#"
+              class="is-active"
+              data-qa="hover"
+            >
+              Laptops & Computers
+            </a>
+          </li>
+          <li><a href="#">Gadgets</a></li>
+          <li><a href="#">Tablets</a></li>
+          <li><a href="#">Photo</a></li>
+          <li><a href="#">Video</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
